--- a/widgets/exponential-explorer/exponential-transformations.html
+++ b/widgets/exponential-explorer/exponential-transformations.html
@@ -12,7 +12,7 @@
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
       line-height: 1.6;
       margin: 0;
-      padding: 2rem;
+      padding: 1rem;
       background-color: #f5f5f5;
     }
     .container {
@@ -20,12 +20,12 @@
       margin: 0 auto;
       background: white;
       border-radius: 8px;
-      padding: 2rem;
+      padding: 1rem;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
     .back-link {
       display: inline-block;
-      margin-bottom: 1rem;
+      margin-bottom: 0.5rem;
       color: #3498db;
       text-decoration: none;
       font-weight: 500;
@@ -36,26 +36,26 @@
     }
     h1 {
       color: #2c3e50;
-      font-size: 1.75rem;
-      margin-bottom: 1.5rem;
+      font-size: 1.25rem;
+      margin-bottom: 0.75rem;
       text-align: center;
     }
     .controls-container {
       display: flex;
       flex-wrap: wrap;
-      gap: 1.5rem;
+      gap: 0.75rem;
     }
     .sidebar {
-      width: 340px;
-      flex: 0 0 340px;
+      width: 320px;
+      flex: 0 0 320px;
       display: flex;
       flex-direction: column;
-      gap: 2rem;
+      gap: 0.75rem;
     }
     .controls {
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      gap: 0.5rem;
     }
     .control {
       display: flex;
@@ -68,26 +68,31 @@
     }
     .control label {
       font-weight: 600;
-      margin-bottom: 0.25rem;
+      margin-bottom: 0.15rem;
       color: #2c3e50;
+      font-size: 0.9rem;
     }
     .control input[type="range"] {
       width: 100%;
-      margin: 0.5rem 0;
+      margin: 0.15rem 0;
     }
     .control input[type="checkbox"] {
       margin: 0;
     }
     .legend,
     .info {
-      font-size: 1.05rem;
+      font-size: 0.9rem;
       background: #f8f9fa;
-      padding: 1rem;
+      padding: 0.5rem;
       border-radius: 6px;
+      margin-bottom: 0.5rem;
+    }
+    .legend {
+      margin-bottom: 0;
     }
     .legend p,
     .info p {
-      margin: 0.25rem 0;
+      margin: 0.1rem 0;
       color: #2c3e50;
     }
     .swatch {
@@ -104,13 +109,13 @@
     .chartarea {
       flex: 1 1 400px;
       background: white;
-      padding: 1rem;
+      padding: 0.5rem;
       border-radius: 6px;
       box-shadow: 0 1px 3px rgba(0,0,0,0.1);
     }
     canvas {
       max-width: 100%;
-      height: 480px;
+      height: 350px;
     }
   </style>
 </head>
@@ -156,14 +161,6 @@
           </div>
         </div>
 
-        <!-- Legend -->
-        <div class="legend">
-          <p><span class="swatch parent"></span>Parent</p>
-          <p><span class="swatch trans"></span>Transformed</p>
-          <p><span class="swatch axis"></span>Axes</p>
-          <p><span class="swatch asymptote"></span>Asymptote</p>
-        </div>
-
         <!-- Equations & Range/Domain -->
         <div class="info">
           <p><strong>Parent:</strong> f(x) = <span id="parentEq">2<sup>x</sup></span></p>
@@ -171,6 +168,14 @@
           <p><strong>Asymptote:</strong> y = <span id="asymptoteText">0</span></p>
           <p><strong>Domain:</strong> <span id="domainText">( −∞ , ∞ )</span></p>
           <p><strong>Range:</strong> <span id="rangeText">( 0 , ∞ )</span></p>
+        </div>
+
+        <!-- Legend -->
+        <div class="legend">
+          <p><span class="swatch parent"></span>Parent</p>
+          <p><span class="swatch trans"></span>Transformed</p>
+          <p><span class="swatch axis"></span>Axes</p>
+          <p><span class="swatch asymptote"></span>Asymptote</p>
         </div>
       </aside>
 
