--- a/widgets/logarithmic-explorer/logarithmic-transformations.html
+++ b/widgets/logarithmic-explorer/logarithmic-transformations.html
@@ -12,7 +12,7 @@
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
       line-height: 1.6;
       margin: 0;
-      padding: 1rem;
+      padding: 0.5rem;
       background-color: #f5f5f5;
     }
     .container {
@@ -20,7 +20,7 @@
       margin: 0 auto;
       background: white;
       border-radius: 8px;
-      padding: 1rem;
+      padding: 0.75rem;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
     .back-link {
@@ -53,6 +53,12 @@
       gap: 0.75rem;
     }
     @media (max-width: 768px) {
+      body {
+        padding: 0.25rem;
+      }
+      .container {
+        padding: 0.5rem;
+      }
       .controls-container {
         flex-direction: column;
       }
@@ -64,24 +70,31 @@
       }
       .chartarea {
         order: 2;
+        padding: 0.5rem;
+        width: calc(100% - 1rem);
+        margin: 0 auto;
       }
       .controls {
-        width: 100%;
+        width: calc(100% - 1rem);
         max-width: 500px;
       }
       .info {
-        width: 100%;
+        width: calc(100% - 1rem);
         max-width: 500px;
-        margin-bottom: 0.75rem;
+        margin-bottom: 0.5rem;
       }
       .legend {
-        width: 100%;
+        width: calc(100% - 1rem);
         max-width: 500px;
-        margin-top: 0.75rem;
+        margin-top: 0.5rem;
         order: 3;
         text-align: left;
         margin-left: auto;
         margin-right: auto;
+        display: block;
+      }
+      canvas {
+        height: 300px;
       }
     }
     .controls {
