--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
       text-align: center;
       margin-bottom: 2rem;
     }
+    h2 {
+      color: #2c3e50;
+      margin: 2rem 0 1rem;
+      padding-bottom: 0.5rem;
+      border-bottom: 2px solid #3498db;
+    }
     .widgets-grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -30,34 +36,73 @@
     }
     .widget-card {
       background: white;
-      border-radius: 8px;
-      padding: 1.5rem;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      transition: transform 0.2s, box-shadow 0.2s;
+      border-radius: 12px;
+      padding: 1.75rem;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+      transition: all 0.3s ease;
+      text-decoration: none;
+      color: inherit;
+      display: block;
+      border: 1px solid rgba(0,0,0,0.05);
     }
     .widget-card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      box-shadow: 0 8px 15px rgba(0,0,0,0.1);
+      border-color: rgba(52, 152, 219, 0.2);
     }
-    .widget-card h2 {
+    .widget-card .title-row {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 1rem;
+      padding-bottom: 0.75rem;
+      border-bottom: 1px solid rgba(0,0,0,0.05);
+    }
+    .widget-card h3 {
       color: #2c3e50;
-      margin-top: 0;
+      margin: 0;
+      font-size: 1.25rem;
+      font-weight: 600;
     }
     .widget-card p {
       color: #666;
       margin-bottom: 1.5rem;
+      line-height: 1.6;
     }
-    .widget-card a {
-      display: inline-block;
+    .widget-card .function {
+      font-family: 'Times New Roman', serif;
+      font-style: italic;
+      color: #2c3e50;
+      font-weight: 600;
+      font-size: 1.25rem;
+      background: #f8f9fa;
+      padding: 0.75rem;
+      border-radius: 8px;
+      margin-top: 0.75rem;
+      text-align: center;
+      border: 1px solid rgba(0,0,0,0.05);
+    }
+    .widget-card:hover .function {
+      background: #f0f4f8;
+      border-color: rgba(52, 152, 219, 0.1);
+    }
+    .widget-card .button {
+      display: block;
       background-color: #3498db;
       color: white;
-      padding: 0.5rem 1rem;
+      padding: 0.75rem 1.5rem;
       text-decoration: none;
-      border-radius: 4px;
-      transition: background-color 0.2s;
+      border-radius: 8px;
+      transition: all 0.2s ease;
+      text-align: center;
+      width: fit-content;
+      margin: 0 auto;
+      font-weight: 500;
+      letter-spacing: 0.5px;
     }
-    .widget-card a:hover {
+    .widget-card:hover .button {
       background-color: #2980b9;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 8px rgba(52, 152, 219, 0.2);
     }
   </style>
 </head>
@@ -65,18 +110,25 @@
 <body>
   <div class="container">
     <h1>Interactive Math Learning Widgets</h1>
+    
+    <h2>Transformations</h2>
     <div class="widgets-grid">
-      <div class="widget-card">
-        <h2>Exponential Transformations</h2>
+      <a href="widgets/exponential-explorer/exponential-transformations.html" class="widget-card">
+        <div class="title-row">
+          <h3>Exponential Explorer</h3>
+          <div class="function">f(x) = b<sup>x</sup></div>
+        </div>
         <p>Explore how different parameters affect exponential functions. Learn about vertical and horizontal stretches, shifts, and reflections.</p>
-        <a href="widgets/exponential-explorer/exponential-transformations.html">Launch Widget</a>
-      </div>
-      <div class="widget-card">
-        <h2>Logarithmic Transformations</h2>
+        <span class="button">Launch Widget</span>
+      </a>
+      <a href="widgets/logarithmic-explorer/logarithmic-transformations.html" class="widget-card">
+        <div class="title-row">
+          <h3>Logarithmic Explorer</h3>
+          <div class="function">f(x) = log<sub>b</sub>(x)</div>
+        </div>
         <p>Explore how different parameters affect logarithmic functions. Learn about vertical and horizontal stretches, shifts, and reflections.</p>
-        <a href="widgets/logarithmic-explorer/logarithmic-transformations.html">Launch Widget</a>
-      </div>
-      <!-- More widget cards will be added here as we create them -->
+        <span class="button">Launch Widget</span>
+      </a>
     </div>
   </div>
 </body>
