--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
       line-height: 1.6;
       margin: 0;
       padding: 2rem;
-      background-color: #f5f5f5;
+      background-color: #f8f9fa;
     }
     .container {
       max-width: 1200px;
       margin: 0 auto;
     }
     h1 {
-      color: #333;
+      color: #000000;
       text-align: center;
       margin-bottom: 2rem;
     }
     h2 {
-      color: #2c3e50;
+      color: #000000;
       margin: 2rem 0 1rem;
       padding-bottom: 0.5rem;
-      border-bottom: 2px solid #3498db;
+      border-bottom: 2px solid #E60000;
     }
     .widgets-grid {
       display: grid;
@@ -48,7 +48,7 @@
     .widget-card:hover {
       transform: translateY(-5px);
       box-shadow: 0 8px 15px rgba(0,0,0,0.1);
-      border-color: rgba(52, 152, 219, 0.2);
+      border-color: rgba(230, 0, 0, 0.2);
     }
     .widget-card .title-row {
       display: flex;
@@ -58,7 +58,7 @@
       border-bottom: 1px solid rgba(0,0,0,0.05);
     }
     .widget-card h3 {
-      color: #2c3e50;
+      color: #000000;
       margin: 0;
       font-size: 1.25rem;
       font-weight: 600;
@@ -71,7 +71,7 @@
     .widget-card .function {
       font-family: 'Times New Roman', serif;
       font-style: italic;
-      color: #2c3e50;
+      color: #000000;
       font-weight: 600;
       font-size: 1.25rem;
       background: #f8f9fa;
@@ -82,12 +82,13 @@
       border: 1px solid rgba(0,0,0,0.05);
     }
     .widget-card:hover .function {
-      background: #f0f4f8;
-      border-color: rgba(52, 152, 219, 0.1);
+      background: #F0B800;
+      border-color: rgba(0,0,0,0.1);
+      color: #000000;
     }
     .widget-card .button {
       display: block;
-      background-color: #3498db;
+      background-color: #E60000;
       color: white;
       padding: 0.75rem 1.5rem;
       text-decoration: none;
@@ -100,9 +101,9 @@
       letter-spacing: 0.5px;
     }
     .widget-card:hover .button {
-      background-color: #2980b9;
+      background-color: #cc0000;
       transform: translateY(-2px);
-      box-shadow: 0 4px 8px rgba(52, 152, 219, 0.2);
+      box-shadow: 0 4px 8px rgba(230, 0, 0, 0.2);
     }
   </style>
 </head>
