--- a/index.html
+++ b/index.html
@@ -1,140 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Math Learning Widgets</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 2rem;
-      background-color: #f8f9fa;
-    }
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-    h1 {
-      color: #000000;
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-    h2 {
-      color: #000000;
-      margin: 2rem 0 1rem;
-      padding-bottom: 0.5rem;
-      border-bottom: 2px solid #E60000;
-    }
-    .widgets-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-      gap: 2rem;
-      padding: 1rem;
-    }
-    .widget-card {
-      background: white;
-      border-radius: 12px;
-      padding: 1.75rem;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.05);
-      transition: all 0.3s ease;
-      text-decoration: none;
-      color: inherit;
-      display: block;
-      border: 1px solid rgba(0,0,0,0.05);
-    }
-    .widget-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 15px rgba(0,0,0,0.1);
-      border-color: rgba(230, 0, 0, 0.2);
-    }
-    .widget-card .title-row {
-      display: flex;
-      flex-direction: column;
-      margin-bottom: 1rem;
-      padding-bottom: 0.75rem;
-      border-bottom: 1px solid rgba(0,0,0,0.05);
-    }
-    .widget-card h3 {
-      color: #000000;
-      margin: 0;
-      font-size: 1.25rem;
-      font-weight: 600;
-    }
-    .widget-card p {
-      color: #666;
-      margin-bottom: 1.5rem;
-      line-height: 1.6;
-    }
-    .widget-card .function {
-      font-family: 'Times New Roman', serif;
-      font-style: italic;
-      color: #000000;
-      font-weight: 600;
-      font-size: 1.25rem;
-      background: #f8f9fa;
-      padding: 0.75rem;
-      border-radius: 8px;
-      margin-top: 0.75rem;
-      text-align: center;
-      border: 1px solid rgba(0,0,0,0.05);
-    }
-    .widget-card:hover .function {
-      background: #F0B800;
-      border-color: rgba(0,0,0,0.1);
-      color: #000000;
-    }
-    .widget-card .button {
-      display: block;
-      background-color: #E60000;
-      color: white;
-      padding: 0.75rem 1.5rem;
-      text-decoration: none;
-      border-radius: 8px;
-      transition: all 0.2s ease;
-      text-align: center;
-      width: fit-content;
-      margin: 0 auto;
-      font-weight: 500;
-      letter-spacing: 0.5px;
-    }
-    .widget-card:hover .button {
-      background-color: #cc0000;
-      transform: translateY(-2px);
-      box-shadow: 0 4px 8px rgba(230, 0, 0, 0.2);
-    }
-  </style>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Math Learning Widgets</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;500;600;700&display=swap"
+      rel="stylesheet">
+    <style>
+      body {
+        font-family: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+        line-height: 1.6;
+        margin: 0;
+        padding: 2rem;
+        background-color: #f8f9fa;
+      }
 
-<body>
-  <div class="container">
-    <h1>Interactive Math Learning Widgets</h1>
-    
-    <h2>Transformations</h2>
-    <div class="widgets-grid">
-      <a href="widgets/exponential-explorer/exponential-transformations.html" class="widget-card">
-        <div class="title-row">
-          <h3>Exponential Explorer</h3>
-          <div class="function">f(x) = b<sup>x</sup></div>
-        </div>
-        <p>Explore how different parameters affect exponential functions. Learn about vertical and horizontal stretches, shifts, and reflections.</p>
-        <span class="button">Launch Widget</span>
-      </a>
-      <a href="widgets/logarithmic-explorer/logarithmic-transformations.html" class="widget-card">
-        <div class="title-row">
-          <h3>Logarithmic Explorer</h3>
-          <div class="function">f(x) = log<sub>b</sub>(x)</div>
-        </div>
-        <p>Explore how different parameters affect logarithmic functions. Learn about vertical and horizontal stretches, shifts, and reflections.</p>
-        <span class="button">Launch Widget</span>
-      </a>
+      .container {
+        max-width: 1200px;
+        margin: 0 auto;
+      }
+
+      h1 {
+        color: #000000;
+        text-align: center;
+        margin-bottom: 2rem;
+      }
+
+      h2 {
+        color: #000000;
+        margin: 2rem 0 1rem;
+        padding-bottom: 0.5rem;
+        border-bottom: 2px solid #E60000;
+      }
+
+      .widgets-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        gap: 2rem;
+        padding: 1rem;
+      }
+
+      .widget-card {
+        background: white;
+        border-radius: 12px;
+        padding: 1.75rem;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+        transition: all 0.3s ease;
+        text-decoration: none;
+        color: inherit;
+        display: block;
+        border: 1px solid rgba(0, 0, 0, 0.05);
+      }
+
+      .widget-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+        border-color: rgba(230, 0, 0, 0.2);
+      }
+
+      .widget-card .title-row {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 1rem;
+        padding-bottom: 0.75rem;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+      }
+
+      .widget-card h3 {
+        color: #000000;
+        margin: 0;
+        font-size: 1.25rem;
+        font-weight: 600;
+      }
+
+      .widget-card p {
+        color: #666;
+        margin-bottom: 1.5rem;
+        line-height: 1.6;
+      }
+
+      .widget-card .function {
+        font-family: 'Times New Roman', serif;
+        font-style: italic;
+        color: #000000;
+        font-weight: 600;
+        font-size: 1.25rem;
+        background: #f8f9fa;
+        padding: 0.75rem;
+        border-radius: 8px;
+        margin-top: 0.75rem;
+        text-align: center;
+        border: 1px solid rgba(0, 0, 0, 0.05);
+      }
+
+      .widget-card:hover .function {
+        background: #F0B800;
+        border-color: rgba(0, 0, 0, 0.1);
+        color: #000000;
+      }
+
+      .widget-card .button {
+        display: block;
+        background-color: #E60000;
+        color: white;
+        padding: 0.75rem 1.5rem;
+        text-decoration: none;
+        border-radius: 8px;
+        transition: all 0.2s ease;
+        text-align: center;
+        width: fit-content;
+        margin: 0 auto;
+        font-weight: 500;
+        letter-spacing: 0.5px;
+      }
+
+      .widget-card:hover .button {
+        background-color: #cc0000;
+        transform: translateY(-2px);
+        box-shadow: 0 4px 8px rgba(230, 0, 0, 0.2);
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="container">
+      <h1>Interactive Math Learning Widgets</h1>
+
+      <h2>Transformations</h2>
+      <div class="widgets-grid">
+        <a href="widgets/exponential-explorer/exponential-transformations.html" class="widget-card">
+          <div class="title-row">
+            <h3>Exponential Explorer</h3>
+            <div class="function">f(x) = b<sup>x</sup></div>
+          </div>
+          <p>Explore how different parameters affect exponential functions. Learn about vertical and
+            horizontal stretches, shifts, and reflections.</p>
+          <span class="button">Launch Widget</span>
+        </a>
+        <a href="widgets/logarithmic-explorer/logarithmic-transformations.html" class="widget-card">
+          <div class="title-row">
+            <h3>Logarithmic Explorer</h3>
+            <div class="function">f(x) = log<sub>b</sub>(x)</div>
+          </div>
+          <p>Explore how different parameters affect logarithmic functions. Learn about vertical and
+            horizontal stretches, shifts, and reflections.</p>
+          <span class="button">Launch Widget</span>
+        </a>
+        <a href="widgets/quadratic-explorer/quadratic-transformations.html" class="widget-card">
+          <div class="title-row">
+            <h3>Quadratic Explorer</h3>
+            <div class="function">f(x) = ax² + bx + c</div>
+          </div>
+          <p>Explore quadratic functions in both standard and vertex form. Learn about
+            transformations, vertex location, and the effects of each parameter.</p>
+          <span class="button">Launch Widget</span>
+        </a>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
 
 </html>
