Fixed Visual Bug in Quadratic Explorer
transformed functions now use two lines instead of 1

--- a/widgets/quadratic-explorer/quadratic-transformations.html
+++ b/widgets/quadratic-explorer/quadratic-transformations.html
@@ -47,8 +47,8 @@
                     <div class="info">
                         <h3>Function Information</h3>
                         <p><strong>Parent:</strong> f(x) = <span id="parentEq">x²</span></p>
-                        <p><strong>Transformed (Vertex Form):</strong> g(x) = <span id="vertexEqText">x²</span></p>
-                        <p><strong>Transformed (Standard Form):</strong> g(x) = <span id="standardEqText">x²</span></p>
+                        <p><strong>Transformed (Vertex Form):</strong><br>g(x) = <span id="vertexEqText">x²</span></p>
+                        <p><strong>Transformed (Standard Form):</strong><br>g(x) = <span id="standardEqText">x²</span></p>
                         <p><strong>Vertex:</strong> (<span id="vertexX">0</span>, <span id="vertexY">0</span>)</p>
                         <p><strong>Axis of Symmetry:</strong> x = <span id="axisEqText">0</span></p>
                         <p><strong>Domain:</strong> <span id="domainText">( −∞ , ∞ )</span></p>
