Added a Complete the Square Widget

--- a/index.html
+++ b/index.html
@@ -159,6 +159,15 @@
             transformations, vertex location, and the effects of each parameter.</p>
           <span class="button">Launch Widget</span>
         </a>
+        <a href="widgets/square-completer/square-completer.html" class="widget-card">
+          <div class="title-row">
+            <h3>Square Completer</h3>
+            <div class="function">ax² + bx + c → a(x - h)² + k</div>
+          </div>
+          <p>Learn how to complete the square geometrically. Visualize the process of converting
+            quadratic expressions from standard form to vertex form.</p>
+          <span class="button">Launch Widget</span>
+        </a>
       </div>
     </div>
   </body>
