Added a Tower of Hanoi Game Widget

--- a/index.html
+++ b/index.html
@@ -169,6 +169,19 @@
           <span class="button">Launch Widget</span>
         </a>
       </div>
+
+      <h2>Puzzles & Games</h2>
+      <div class="widgets-grid">
+        <a href="widgets/hanoi-tower/hanoi-tower.html" class="widget-card">
+          <div class="title-row">
+            <h3>Tower of Hanoi</h3>
+            <div class="function">Classic Puzzle</div>
+          </div>
+          <p>Solve the Tower of Hanoi puzzle. Move disks between towers, aiming for the optimal number of moves. Select the number of disks to challenge yourself!</p>
+          <span class="button">Play Game</span>
+        </a>
+      </div>
+
     </div>
   </body>
 
