Fixed some bugs in the explorers.

--- a/widgets/exponential-explorer/exponential-transformations.html
+++ b/widgets/exponential-explorer/exponential-transformations.html
@@ -59,13 +59,13 @@
         <!-- Equations & Range/Domain -->
         <div class="info">
           <h3>Function Information</h3>
-          <p><strong>Parent:</strong> f(x) = <span id="parentEq">2<sup>x</sup></span></p>
-          <p><strong>Transformed (Exponential Form):</strong><br>g(x) = <span id="eqText">2<sup>x</sup></span></p>
-          <p><strong>Transformed (Standard Form):</strong><br>g(x) = <span id="standardEqText">2<sup>x</sup></span></p>
-          <p><strong>Key Point:</strong> (<span id="keyX">0</span>, <span id="keyY">1</span>)</p>
-          <p><strong>Asymptote:</strong> y = <span id="asymptoteText">0</span></p>
-          <p><strong>Domain:</strong> <span id="domainText">( −∞ , ∞ )</span></p>
-          <p><strong>Range:</strong> <span id="rangeText">( 0 , ∞ )</span></p>
+          <p><strong>Parent:</strong> f(x) = <span id="parentEq">b<sup>x</sup></span></p>
+          <p><strong>Transformed Equation:</strong> g(x) = <span id="eqText">a(b<sup>px-h</sup>)+k</span></p>
+          <p><strong>Key Point (Parent):</strong> P = <span id="parentKeyPoint"> (0,1) </span></p>
+          <p><strong>Key Point (Transformed):</strong> P' = <span id="transKeyPoint">(h/p, a+k)</span></p>
+          <p><strong>Horizontal Asymptote:</strong> y = <span id="asymptoteText">0</span></p>
+          <p><strong>Domain:</strong> <span id="domainText">(−∞, ∞)</span></p>
+          <p><strong>Range:</strong> <span id="rangeText">(0, ∞)</span></p>
         </div>
       </aside>
 
