--- a/widgets/logarithmic-explorer/logarithmic-transformations.html
+++ b/widgets/logarithmic-explorer/logarithmic-transformations.html
@@ -59,13 +59,13 @@
         <!-- Equations & Range/Domain -->
         <div class="info">
           <h3>Function Information</h3>
-          <p><strong>Parent:</strong> f(x) = <span id="parentEq">log<sub>2</sub>(x)</span></p>
-          <p><strong>Transformed (Logarithmic Form):</strong><br>g(x) = <span id="eqText">log<sub>2</sub>(x)</span></p>
-          <p><strong>Transformed (Standard Form):</strong><br>g(x) = <span id="standardEqText">log<sub>2</sub>(x)</span></p>
-          <p><strong>Key Point:</strong> (<span id="keyX">1</span>, <span id="keyY">0</span>)</p>
-          <p><strong>Asymptote:</strong> x = <span id="asymptoteText">0</span></p>
-          <p><strong>Domain:</strong> <span id="domainText">( 0 , ∞ )</span></p>
-          <p><strong>Range:</strong> <span id="rangeText">( −∞ , ∞ )</span></p>
+          <p><strong>Parent:</strong> f(x) = <span id="parentEq">log<sub>b</sub>(x)</span></p>
+          <p><strong>Transformed Equation:</strong> g(x) = <span id="eqText">alog<sub>b</sub>(px-h)+k</span></p>
+          <p><strong>Key Point (Parent):</strong> P = <span id="parentKeyPoint">(1,0)</span></p>
+          <p><strong>Key Point (Transformed):</strong> P' = <span id="transKeyPoint">((1+h)/p, k)</span></p>
+          <p><strong>Vertical Asymptote:</strong> x = <span id="asymptoteText">0</span></p>
+          <p><strong>Domain:</strong> <span id="domainText">(0, ∞)</span></p>
+          <p><strong>Range:</strong> <span id="rangeText">(−∞, ∞)</span></p>
         </div>
       </aside>
 
