Updated Game of Life

--- a/index.html
+++ b/index.html
@@ -180,6 +180,14 @@
           <p>Solve the Tower of Hanoi puzzle. Move disks between towers, aiming for the optimal number of moves. Select the number of disks to challenge yourself!</p>
           <span class="button">Play Game</span>
         </a>
+        <a href="widgets/game-of-life/game-of-life.html" class="widget-card">
+          <div class="title-row">
+            <h3>Conway's Game of Life</h3>
+            <div class="function">Cellular Automaton</div>
+          </div>
+          <p>Explore Conway's Game of Life. Set up initial patterns of cells and watch them evolve based on simple rules. Discover oscillators, spaceships, and other emergent behaviors.</p>
+          <span class="button">Explore Life</span>
+        </a>
       </div>
 
     </div>
