Added Beta Label on Game of Life

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </a>
         <a href="widgets/game-of-life/game-of-life.html" class="widget-card">
           <div class="title-row">
-            <h3>Conway's Game of Life</h3>
+            <h3>Conway's Game of Life (BETA)</h3>
             <div class="function">Cellular Automaton</div>
           </div>
           <p>Explore Conway's Game of Life. Set up initial patterns of cells and watch them evolve based on simple rules. Discover oscillators, spaceships, and other emergent behaviors.</p>
