Added a nonogram widget
New game! There's a nonogram widget available now.

--- a/index.html
+++ b/index.html
@@ -188,6 +188,14 @@
           <p>Explore Conway's Game of Life. Set up initial patterns of cells and watch them evolve based on simple rules. Discover oscillators, spaceships, and other emergent behaviors.</p>
           <span class="button">Explore Life</span>
         </a>
+        <a href="widgets/nonogram/nonogram.html" class="widget-card">
+          <div class="title-row">
+            <h3>Nonogram</h3>
+            <div class="function">Picross Logic Puzzle</div>
+          </div>
+          <p>Fill the grid using row and column clues to reveal a hidden picture. Includes timer, moves, hints, undo/redo, and shareable seeds.</p>
+          <span class="button">Solve Puzzle</span>
+        </a>
       </div>
 
     </div>
