Added Bug Fixes to game and included beta Group theory

--- a/index.html
+++ b/index.html
@@ -196,6 +196,14 @@
           <p>Fill the grid using row and column clues to reveal a hidden picture. Includes timer, moves, hints, undo/redo, and shareable seeds.</p>
           <span class="button">Solve Puzzle</span>
         </a>
+        <a href="widgets/group-theory/group-theory.html" class="widget-card">
+          <div class="title-row">
+            <h3>Rectangle Symmetries</h3>
+            <div class="function">Group D2</div>
+          </div>
+          <p>Experiment with 180° rotation and flips on a rectangle, then build the Cayley table yourself to learn group structure.</p>
+          <span class="button">Explore Group</span>
+        </a>
       </div>
 
     </div>
