--- a/widgets/hanoi-tower/hanoi-tower.html
+++ b/widgets/hanoi-tower/hanoi-tower.html
@@ -184,6 +184,12 @@
           <p>Moves Taken: <span id="movesTakenDisplay" class="info-readout">0</span></p>
           <p>Undos Used: <span id="undoCountDisplay" class="info-readout">0</span></p>
         </div>
+
+        <div class="info">
+          <h3>How to Play</h3>
+          <p>Objective: Move the full stack of disks from the first peg onto any one other peg.</p>
+          <p>Rules: You can move only one disk at a time; you may only move the top disk from a peg; and you may never place a larger disk on top of a smaller disk.</p>
+        </div>
         
         <!-- Buttons Grouped -->
         <div class="control button-group">
